logs/Slang/generated/hdlconv/hdlconvertor_p762.sv.log
name: hdlconvertor_p762
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p762.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p762.sv:31:15: error: unknown interface 'interface'
module memMod(interface a); // Uses just the interface
              ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p762.sv:41:15: error: unknown interface 'interface'
module cpuMod(interface b);
              ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p762.sv:43:21: error: use of undeclared identifier '$random'
logic [7:0] raddr = $random();
                    ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p762.sv:51:17: error: unknown interface 'interface'
module omniMod( interface b);
                ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p762.sv:57:19: error: hierarchical names are not allowed in constant expressions
memMod mem(sb_intf.slave); // only has access to the slave tasks
           ~~~~~~~^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p762.sv:58:19: error: hierarchical names are not allowed in constant expressions
cpuMod cpu(sb_intf.master); // only has access to the master tasks
           ~~~~~~~^
